# prism-agentic-rag-chatbot

./: .gitignore  Dockerfile  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  product.py  users.py
app/core/: config.py  db.py  deps.py  middleware.py  redis.py  security.py
app/models/: __init__.py  image.py  product.py  user.py
app/repository/: products_repo.py  users_repo.py
app/schema/: product.py  user.py
app/services/: cache_service.py  products_services.py  users_services.py
tests/: conftest.py  test_caching.py  test_integration.py  test_prometheus.py  test_security.py
