[project]
name = "prism-agentic-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncmy>=0.2.11",
    "authlib>=1.7.2",
    "fastapi>=0.137.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
